# pytest-gpu-proof

./: .gitignore  404.html  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  RELEASING.md  ROADMAP.md  index.html  install.sh  mkdocs.yml  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml  docs.yml  publish-testpypi.yml  publish.yml
architecture/: index.html
ci_gpu_mode/: index.html
docs/: architecture.md  ci_gpu_mode.md  index.md  landscape.md  local_mode.md  quickstart.md  security_model.md
examples/cuda_ctypes_matmul/: Makefile  README.md  cuda_ctypes_matmul.py  matmul_kernel.cu  test_cuda_ctypes_matmul.py
examples/cuda_nanobind_matmul/: CMakeLists.txt  README.md  test_cuda_nanobind_matmul.py
examples/cuda_nanobind_matmul/src/: bindings.cpp  matmul_cuda.h  matmul_kernel.cu
examples/cuda_pybind11_matmul/: CMakeLists.txt  README.md  test_cuda_pybind11_matmul.py
examples/cuda_pybind11_matmul/src/: bindings.cpp
examples/github_gpu_runner/.github/workflows/: gpu-test.yml
examples/jax_ffi_cuda_matmul/: CMakeLists.txt  README.md  jax_ffi_matmul.py  test_jax_ffi_cuda_matmul.py
examples/jax_ffi_cuda_matmul/src/: matmul_ffi.cu
examples/local_receipt_verify/.github/workflows/: verify.yml
examples/minimal_python_only/: conftest.py  test_minimal.py
examples/wrapped_cuda_ctypes/: fake_cuda_lib.py  test_cuda_wrapper.py
landscape/: index.html
local_mode/: index.html
quickstart/: index.html
search/: search_index.json
security_model/: index.html
src/pytest_gpu_proof/: __main__.py  cli.py  compare.py  config.py  fingerprint.py  gitutils.py  plugin.py  receipt.py  verify.py
src/pytest_gpu_proof/signers/: base.py  ed25519.py
tests/: conftest.py  test_compare.py  test_fingerprint.py  test_gitutils.py  test_plugin_capture.py  test_receipt.py  test_signing.py  test_verifier.py
