[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pytest-gpu-proof"
version = "0.1.0"
description = "pytest plugin for GPU equivalence testing with signed receipts verified via GitHub SSH keys"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
keywords = ["pytest", "gpu", "cuda", "testing", "signing", "attestation"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Framework :: Pytest",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Testing",
    "Topic :: Security :: Cryptography",
]
dependencies = [
    "pytest>=7.0",
    "cryptography>=41.0",
]

[project.urls]
Homepage = "https://github.com/A2R-Lab/pytest-gpu-proof"
Documentation = "https://a2r-lab.github.io/pytest-gpu-proof/"
Repository = "https://github.com/A2R-Lab/pytest-gpu-proof"
Issues = "https://github.com/A2R-Lab/pytest-gpu-proof/issues"
Changelog = "https://github.com/A2R-Lab/pytest-gpu-proof/blob/main/CHANGELOG.md"

[project.optional-dependencies]
dev = [
    "pytest-cov",
    "numpy",
]
sigstore = [
    "sigstore",
]

[project.entry-points."pytest11"]
gpu-proof = "pytest_gpu_proof.plugin"

[project.scripts]
gpu-proof = "pytest_gpu_proof.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/pytest_gpu_proof"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.gpu_proof]
# Default plugin/verifier configuration, read from the rootdir pyproject.toml.
# CLI flags take precedence over values set here.
# mode = "local"
# output = "gpu-proof.json"
# signing_backend = "ed25519"
# required_marker = "gpu_proof"
# fail_on_skip = false
# fingerprint_paths = ["src", "tests"]
# max_age_days = 30       # verifier freshness default
# require_gpu = false     # verifier: require environment.gpu_info in the receipt
